--- a/src/button/style/button-base.scss
+++ b/src/button/style/button-base.scss
@@ -22,7 +22,19 @@
        $s-animation-ease-in-out-smooth,
      border-color $s-animation-duration-slow $s-animation-ease-in-out-smooth,
      color $s-animation-duration-slow $s-animation-ease-in-out-smooth;
- 
+
+    // 禁用状态
+  &[disabled] {
+    @apply cursor-not-allowed
+  }
+  // 控制block
+  &.s-btn--block {
+    @apply block w-full
+  }
+  &.s-btn--loading {
+    // @apply 
+  }
+
 }
 
 @mixin button-variant($variant, $pseudo: false) {
