feat: 新增table组件勾选以及事件处理

--- a/src/table/style/table.scss
+++ b/src/table/style/table.scss
@@ -9,8 +9,8 @@
 
   th,
   td {
-    padding: 8px 0;
-    text-align: left;
+    padding: 8px 10px;
+    text-align: center;
     border-bottom: 1px solid #ebeef5;
   }
 }
