fix: 修改button默认样式

--- a/src/button/style/button-base.scss
+++ b/src/button/style/button-base.scss
@@ -6,7 +6,7 @@
 
    // 元素属性
    @apply border-[1px] border-solid border-transparent 
-   h-[28px] py-0 px-[20px]
+   h-[28px] py-0 px-[20px] mx-1
    bg-transparent;
    border-radius: $s-border-radius;
  
